--- a/package.json
+++ b/package.json
@@ -23,7 +23,5 @@
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
-    "dependencies": {
-        "granim": "^2.0.0"
-    }
+    "dependencies": {}
 }
